feat: statecraft/centrality rework start

--- a/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
+++ b/localisation/english/replace/zzzz_evolved_traditions_replace_l_english.yml
@@ -8,7 +8,7 @@
 # ------------------------------------------------- Diplomacy
 	tr_diplomacy_diplomatic_networking_desc:0 "Embassies produce §G+3§! §Y$tec_loc_unity$§!, scaling up to §G+10§! based on the empire £diplo_weight£ §Y$diplomatic_weight$§!.\nAllows Advanced Diplomatic Actions without an Embassy"
 
-	tr_diplomacy_finish_tooltip:4 "Monthly Federation Experience Gain: §G+2§!\nDiplomatic Weight: §G+10%§!\nMax $tec_loc_leader_official$s: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §Y$tradition_tec_statecraft$§! will be available.§!\n"
+	tr_diplomacy_finish_tooltip:4 "Monthly Federation Experience Gain: §G+2§!\nDiplomatic Weight: §G+10%§!\nMax $tec_loc_leader_official$s: §G+1§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §Y$tradition_tec_centrality$§! will be available.§!\n"
 
 # ------------------------------------------------- Discovery
 	tr_discovery_finish_tooltip:0 "After researching §Y5§! £trigger_tec_research£ Technologies, the empire has a §Y10%§! chance of gaining a random §GGuaranteed Research§! with §Y25%§! of progress per each subsequent technology researched. This effect stacks and resets after the tech is provided.\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YInvention§! will be available.§!\n"
@@ -41,8 +41,8 @@
 	tr_tec_expansion_a_new_life_cloning_delayed:2 "By preserving the fundamental basis of our species and transferring entire batches of nearly developed embryos to new colonies, we will greatly improve our colonization, adaptation and development process."
 
 # ------------------------------------------------- Harmony
-	tr_harmony_finish_desc:4 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!\nAscension Perks Unlocked: §G+1§!\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
-	tr_harmony_federations_finish_desc:0 "$MOD_PLANETARY_ASCENSION_EFFECT_MULT$: §G+25%§!.\nGrants access to the §Y$spiritualist_federation$§! Federation type.\nAscension Perks Unlocked: §G+1§!"
+	tr_harmony_finish_desc:4 "\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
+	tr_harmony_federations_finish_desc:0 "\n\nGrants access to the §Y$spiritualist_federation$§! Federation type.\n\n§EThe Tier II tradition tree §YBalance§! will be available.§!\n"
 
 # ------------------------------------------------- Mercantile
 	tr_mercantile_trickle_up_economics_desc: ""
