--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -394,121 +394,120 @@
  # /
  # Statecraft
  # ------------------------------------------------------------
-	tradition_tec_statecraft:0 "Statecraft"
-	tradition_tec_statecraft_desc:0 "The true foundation of our society lies in how relationships and our growth, and so we need to build upon the correct working and perfect cohesion of our state."
+	tradition_tec_centrality:0 "Centrality"
+	tradition_tec_centrality_desc:0 "The true foundation of our society lies in how relationships and our growth, and so we need to build upon the correct working and perfect cohesion of our state."
 
-	tradition_tec_statecraft_self:0 "Autarchy"
-	tradition_tec_statecraft_self_desc:0 "The Universe is full of problems to ignore, solve or directly eradicate, but our focus should always be put in our kind, and nothing more."
+	tradition_tec_centrality_self:0 "Autarchy"
+	tradition_tec_centrality_self_desc:0 "The Universe is full of problems to ignore, solve or directly eradicate, but our focus should always be put in our kind, and nothing more."
 
-	tradition_tec_statecraft_hive:0 "Connectivity"
-	tradition_tec_statecraft_hive_desc:0 "Lesser or individual minds will never understand our internal proficiency and greatness, but they will understand our will and actions."
+	tradition_tec_centrality_hive:0 "Connectivity"
+	tradition_tec_centrality_hive_desc:0 "Lesser or individual minds will never understand our internal proficiency and greatness, but they will understand our will and actions."
 
-	tradition_tec_statecraft_machine:0 "Determination"
-	tradition_tec_statecraft_machine_desc:0 "Our physical coldness and hardness must also be manifested internally, with rigid code, solid programming and cold-efficient doing."
+	tradition_tec_centrality_machine:0 "Determination"
+	tradition_tec_centrality_machine_desc:0 "Our physical coldness and hardness must also be manifested internally, with rigid code, solid programming and cold-efficient doing."
 
-	tradition_tec_statecraft_biohive:0 "Evolution"
-	tradition_tec_statecraft_biohive_desc:0 "TO DO. "	# REDACT LORE
+	tradition_tec_centrality_biohive:0 "Evolution"
+	tradition_tec_centrality_biohive_desc:0 "TO DO. "	# REDACT LORE
 
-	tr_tec_statecraft_adopt:0 "Statecraft Traditions"
-	tr_tec_statecraft_adopt_tooltip:7 "£unity£ §YEdict Upkeep§! decreased by §G10%§!."
+	tr_tec_centrality_adopt:0 "$tradition_tec_centrality$ Traditions"
 
-	tr_tec_statecraft_finish:0 "Statecraft Traditions Finished"
-	tr_tec_statecraft_finish_tooltip:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
+	tr_tec_centrality_finish:0 "$tradition_tec_centrality$ Traditions Finished"
+	tr_tec_centrality_finish_tooltip:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
 
-	tr_tec_statecraft_finish_autarchy:0 "Autarchy Traditions Finished"
-	tr_tec_statecraft_finish_autarchy_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
+	tr_tec_centrality_finish_autarchy:0 "$tradition_tec_centrality$ Traditions Finished"
+	tr_tec_centrality_finish_autarchy_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
 
-	tr_tec_statecraft_finish_hive:0 "Connectivity Traditions Finished"
-	tr_tec_statecraft_finish_hive_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
+	tr_tec_centrality_finish_hive:0 "$tradition_tec_centrality$ Traditions Finished"
+	tr_tec_centrality_finish_hive_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
 
-	tr_tec_statecraft_finish_machine:0 "Determination Traditions Finished"
-	tr_tec_statecraft_finish_machine_tooltip:4 "$tr_tec_statecraft_finish_tooltip$"
+	tr_tec_centrality_finish_machine:0 "$tradition_tec_centrality$ Traditions Finished"
+	tr_tec_centrality_finish_machine_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
 
-	tr_tec_statecraft_finish_effect:4 ""
-	tr_tec_statecraft_finish_autarchy_effect:4 ""
-	tr_tec_statecraft_finish_machine_effect:4 ""
-	tr_tec_statecraft_finish_hive_effect:4 ""
+	tr_tec_centrality_finish_effect:4 ""
+	tr_tec_centrality_finish_autarchy_effect:4 ""
+	tr_tec_centrality_finish_machine_effect:4 ""
+	tr_tec_centrality_finish_hive_effect:4 ""
 
-	tr_tec_statecraft_1:0 "Unquestionable Decision-making"
-	tr_tec_statecraft_1_tooltip:0 "§YFactions§! output: §G+10%§!."
-	tr_tec_statecraft_1_delayed:0 "It's not only matter of making decisions, but making the correct ones."
+	tr_tec_centrality_1:0 "Unquestionable Decision-making"
+	tr_tec_centrality_1_tooltip:0 "§YFactions§! output: §G+10%§!."
+	tr_tec_centrality_1_delayed:0 "It's not only matter of making decisions, but making the correct ones."
 
-	tr_tec_statecraft_1_gestalt:0 "Confluent Decisions"
-	tr_tec_statecraft_1_gestalt_tooltip:0 "£unity£ §YEdict§! upkeep: §G-10%§!."
-	tr_tec_statecraft_1_gestalt_delayed:0 "As united mind, decisions are debated by infinite voices and processes, so only the correct ones should be filtered out the echo."
+	tr_tec_centrality_1_gestalt:0 "Confluent Decisions"
+	tr_tec_centrality_1_gestalt_tooltip:0 "£unity£ §YEdict§! upkeep: §G-10%§!."
+	tr_tec_centrality_1_gestalt_delayed:0 "As united mind, decisions are debated by infinite voices and processes, so only the correct ones should be filtered out the echo."
 
-	tr_tec_statecraft_2:0 "Ruling Elite"
-	tr_tec_statecraft_2_tooltip:0 "£pop_cat_ruler£ §YRulers§! produce §G+2§! additional §Y$tec_loc_unity$§!."
-	tr_tec_statecraft_2_delayed:0 "Those who locally control our worlds are those who need to take responsibilities and be the best of the best."
+	tr_tec_centrality_2:0 "Ruling Elite"
+	tr_tec_centrality_2_tooltip:0 "£pop_cat_ruler£ §YRulers§! produce §G+2§! additional §Y$tec_loc_unity$§!."
+	tr_tec_centrality_2_delayed:0 "Those who locally control our worlds are those who need to take responsibilities and be the best of the best."
 
-	tr_tec_statecraft_2_gestalt:0 "Layered Complexity"
-	tr_tec_statecraft_2_gestalt_tooltip:0 "£pop_cat_complex_drone£ §YComplex drones§! output increased by §G5%§!."
-	tr_tec_statecraft_2_gestalt_delayed:0 "Intricate layers of different drone complexity and capacities ensure our survival as a whole."
+	tr_tec_centrality_2_gestalt:0 "Layered Complexity"
+	tr_tec_centrality_2_gestalt_tooltip:0 "£pop_cat_complex_drone£ §YComplex drones§! output increased by §G5%§!."
+	tr_tec_centrality_2_gestalt_delayed:0 "Intricate layers of different drone complexity and capacities ensure our survival as a whole."
 
-	tr_tec_statecraft_3:0 "The Grand Game"
-	tr_tec_statecraft_3_tooltip:0 "§YDiplomatic Weight§! increased by §G10%§!."
-	tr_tec_statecraft_3_delayed:0 "In a galactic dance of civilizations, its how we move our pieces how we will prosper, or perish."
+	tr_tec_centrality_3:0 "The Grand Game"
+	tr_tec_centrality_3_tooltip:0 "§YDiplomatic Weight§! increased by §G10%§!."
+	tr_tec_centrality_3_delayed:0 "In a galactic dance of civilizations, its how we move our pieces how we will prosper, or perish."
 
-	tr_tec_statecraft_3_autarchy:0 "Inside Game"
-	tr_tec_statecraft_3_autarchy_tooltip:0 "Jobs §YOutput§! increased by §G5%§!, but job §YUpkeep§! is also increased by §R5%§! ."
-	tr_tec_statecraft_3_autarchy_delayed:0 "Balancing economy will lead to controlling every aspect of it."
+	tr_tec_centrality_3_autarchy:0 "Inside Game"
+	tr_tec_centrality_3_autarchy_tooltip:0 "Jobs §YOutput§! increased by §G5%§!, but job §YUpkeep§! is also increased by §R5%§! ."
+	tr_tec_centrality_3_autarchy_delayed:0 "Balancing economy will lead to controlling every aspect of it."
 
-	tr_tec_statecraft_4:0 "Embracing Change"
-	tr_tec_statecraft_4_tooltip:0 "Planetary Ascension Cost: §G-15%§!."
-	tr_tec_statecraft_4_delayed:0 "Constant change and evolution is what bring us here, and is what will bring us forward."
+	tr_tec_centrality_4:0 "Embracing Change"
+	tr_tec_centrality_4_tooltip:0 "Planetary Ascension Cost: §G-15%§!."
+	tr_tec_centrality_4_delayed:0 "Constant change and evolution is what bring us here, and is what will bring us forward."
 
-		tr_tec_statecraft_final_1:0 "Flexible Status"
-		tr_tec_statecraft_final_1_text:0 "$tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+2§!"
-		tr_tec_statecraft_final_1_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_1_text$"
-		tr_tec_statecraft_final_1_delayed:0 "Coordinating a whole empire requires a great degree of flexibility and effective utility."
+		tr_tec_centrality_final_1:0 "Flexible Status"
+		tr_tec_centrality_final_1_text:0 "$tec_loc_amenities$ from $tec_loc_effect_administrators$: §G+2§!"
+		tr_tec_centrality_final_1_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_1_text$"
+		tr_tec_centrality_final_1_delayed:0 "Coordinating a whole empire requires a great degree of flexibility and effective utility."
 
-		tr_tec_statecraft_final_1_disabled:0 "$tr_tec_statecraft_final_1$"
-		tr_tec_statecraft_final_1_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_statecraft_final_1_text$"
-		tr_tec_statecraft_final_1_disabled_delayed:0 "$tr_tec_statecraft_final_1_delayed$"
+		tr_tec_centrality_final_1_disabled:0 "$tr_tec_centrality_final_1$"
+		tr_tec_centrality_final_1_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_1_text$"
+		tr_tec_centrality_final_1_disabled_delayed:0 "$tr_tec_centrality_final_1_delayed$"
 
-		tr_tec_statecraft_final_2:0 "Inflection Point"
-		tr_tec_statecraft_final_2_text:0 "Capital buildings provide up to 2 extra §YImperial Arbiters§!, extra efficient Ruler jobs.\n\nImperial Arbiters generate §Y$tec_loc_amenities$§!, and §YExtra bonuses§! based on your empire §YAuthority and Ethics§!."
-		tr_tec_statecraft_final_2_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_2_text$"
-		tr_tec_statecraft_final_2_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		tr_tec_centrality_final_2:0 "Inflection Point"
+		tr_tec_centrality_final_2_text:0 "Capital buildings provide up to 2 extra §YImperial Arbiters§!, extra efficient Ruler jobs.\n\nImperial Arbiters generate §Y$tec_loc_amenities$§!, and §YExtra bonuses§! based on your empire §YAuthority and Ethics§!."
+		tr_tec_centrality_final_2_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_text$"
+		tr_tec_centrality_final_2_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
 
-		tr_tec_statecraft_final_2_disabled:0 "Inflection Point"
-		tr_tec_statecraft_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_statecraft_final_2_text$"
-		tr_tec_statecraft_final_2_disabled_delayed:0 "$tr_tec_statecraft_final_2_delayed$"
+		tr_tec_centrality_final_2_disabled:0 "Inflection Point"
+		tr_tec_centrality_final_2_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_text$"
+		tr_tec_centrality_final_2_disabled_delayed:0 "$tr_tec_centrality_final_2_delayed$"
 
-		tr_tec_statecraft_final_2_hive:0 "Inflection Point"
-		tr_tec_statecraft_final_2_hive_text:0 "Capital buildings provide up to 2 extra §YBehavioral Regulators§!, extra efficient Complex Drones.\n\nBehavioral Regulators generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
-		tr_tec_statecraft_final_2_hive_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_2_hive_text$"
-		tr_tec_statecraft_final_2_hive_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		tr_tec_centrality_final_2_hive:0 "Inflection Point"
+		tr_tec_centrality_final_2_hive_text:0 "Capital buildings provide up to 2 extra §YBehavioral Regulators§!, extra efficient Complex Drones.\n\nBehavioral Regulators generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
+		tr_tec_centrality_final_2_hive_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_hive_text$"
+		tr_tec_centrality_final_2_hive_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
 
-		tr_tec_statecraft_final_2_hive_disabled:0 "Inflection Point"
-		tr_tec_statecraft_final_2_hive_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_statecraft_final_2_hive_text$"
-		tr_tec_statecraft_final_2_hive_disabled_delayed:0 "$tr_tec_statecraft_final_2_hive_delayed$"
+		tr_tec_centrality_final_2_hive_disabled:0 "Inflection Point"
+		tr_tec_centrality_final_2_hive_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_hive_text$"
+		tr_tec_centrality_final_2_hive_disabled_delayed:0 "$tr_tec_centrality_final_2_hive_delayed$"
 
-		tr_tec_statecraft_final_2_machine:0 "Inflection Point"
-		tr_tec_statecraft_final_2_machine_text:0 "Capital buildings provide up to 2 extra §YCommand Relays§!, extra efficient Complex Drones.\n\nCommand Relays generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
-		tr_tec_statecraft_final_2_machine_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_2_machine_text$"
-		tr_tec_statecraft_final_2_machine_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
+		tr_tec_centrality_final_2_machine:0 "Inflection Point"
+		tr_tec_centrality_final_2_machine_text:0 "Capital buildings provide up to 2 extra §YCommand Relays§!, extra efficient Complex Drones.\n\nCommand Relays generate £amenities_no_happiness£ §YAmenities§!, and §YExtra bonuses§! based on your empire §YEthics and Civics§!."
+		tr_tec_centrality_final_2_machine_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_2_machine_text$"
+		tr_tec_centrality_final_2_machine_delayed:0 "The strongest and most cunning of our kind are those who must protect our way of living, and guide our kind to a better future."
 
-		tr_tec_statecraft_final_2_machine_disabled:0 "Inflection Point"
-		tr_tec_statecraft_final_2_machine_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_statecraft_final_2_machine_tooltip$"
-		tr_tec_statecraft_final_2_machine_disabled_delayed:0 "$tr_tec_statecraft_final_2_machine_delayed$"
+		tr_tec_centrality_final_2_machine_disabled:0 "Inflection Point"
+		tr_tec_centrality_final_2_machine_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_2_machine_tooltip$"
+		tr_tec_centrality_final_2_machine_disabled_delayed:0 "$tr_tec_centrality_final_2_machine_delayed$"
 
-		tr_tec_statecraft_final_3:0 "Increased Self-management"
-		tr_tec_statecraft_final_3_text:0 ""
-		tr_tec_statecraft_final_3_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_statecraft_final_3_text$"
-		tr_tec_statecraft_final_3_delayed:0 "Releasing administrative loads from our settlements and colonies will greatly soothe our overall administrative load."
+		tr_tec_centrality_final_3:0 "Increased Self-management"
+		tr_tec_centrality_final_3_text:0 ""
+		tr_tec_centrality_final_3_tooltip:0 "$tec_tradition_swap_warning$\n\n$tr_tec_centrality_final_3_text$"
+		tr_tec_centrality_final_3_delayed:0 "Releasing administrative loads from our settlements and colonies will greatly soothe our overall administrative load."
 
-		tr_tec_statecraft_final_3_disabled:0 "Increased Self-management"
-		tr_tec_statecraft_final_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_statecraft_final_3_text$"
-		tr_tec_statecraft_final_3_disabled_delayed:0 "$tr_tec_statecraft_final_3_delayed$"
+		tr_tec_centrality_final_3_disabled:0 "Increased Self-management"
+		tr_tec_centrality_final_3_disabled_tooltip:0 "$tec_tradition_swap_disabled$\n\n$tr_tec_centrality_final_3_text$"
+		tr_tec_centrality_final_3_disabled_delayed:0 "$tr_tec_centrality_final_3_delayed$"
 
-	#tr_tec_statecraft_final_3_autarchy:0 "Stance Dance"
-	#tr_tec_statecraft_final_3_autarchy_tooltip:0 "£mod_country_admin_cap_add£ §YDiplomatic Stances§! provide increased bonuses for the #empire."
-	#tr_tec_statecraft_final_3_autarchy_delayed:0 "In a galaxy where just the smallest detail can turn the tides of any conflict or #relation, its up to us to decide how to deal with it."
+	#tr_tec_centrality_final_3_autarchy:0 "Stance Dance"
+	#tr_tec_centrality_final_3_autarchy_tooltip:0 "£mod_country_admin_cap_add£ §YDiplomatic Stances§! provide increased bonuses for the #empire."
+	#tr_tec_centrality_final_3_autarchy_delayed:0 "In a galaxy where just the smallest detail can turn the tides of any conflict or #relation, its up to us to decide how to deal with it."
 
-	#tr_tec_statecraft_final_3:0 "Diplomatic Immunity"
-	#tr_tec_statecraft_final_3_tooltip:0 "£building£ §YEmbassy buildings§! have §Gno upkeep§! and provides §G1§! extra §YEnvoy§!."
-	#tr_tec_statecraft_final_3_delayed:0 "In a galaxy where diplomacy can turn the tides of any conflict, having an adequate and well #maintained corp of envoys and specialists is a real advantage."
+	#tr_tec_centrality_final_3:0 "Diplomatic Immunity"
+	#tr_tec_centrality_final_3_tooltip:0 "£building£ §YEmbassy buildings§! have §Gno upkeep§! and provides §G1§! extra §YEnvoy§!."
+	#tr_tec_centrality_final_3_delayed:0 "In a galaxy where diplomacy can turn the tides of any conflict, having an adequate and well #maintained corp of envoys and specialists is a real advantage."
  # /
  # Invention (Discovery 2)
  # ------------------------------------------------------------
