feat: more locs for centrality

--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -397,36 +397,26 @@
 	tradition_tec_centrality:0 "Centrality"
 	tradition_tec_centrality_desc:0 "The true foundation of our society lies in how relationships and our growth, and so we need to build upon the correct working and perfect cohesion of our state."
 
-	tradition_tec_centrality_self:0 "Autarchy"
+	#tradition_tec_centrality_self:0 "Autarchy"
 	tradition_tec_centrality_self_desc:0 "The Universe is full of problems to ignore, solve or directly eradicate, but our focus should always be put in our kind, and nothing more."
 
-	tradition_tec_centrality_hive:0 "Connectivity"
+	#tradition_tec_centrality_hive:0 "Connectivity"
 	tradition_tec_centrality_hive_desc:0 "Lesser or individual minds will never understand our internal proficiency and greatness, but they will understand our will and actions."
 
-	tradition_tec_centrality_machine:0 "Determination"
+	#tradition_tec_centrality_machine:0 "Determination"
 	tradition_tec_centrality_machine_desc:0 "Our physical coldness and hardness must also be manifested internally, with rigid code, solid programming and cold-efficient doing."
 
-	tradition_tec_centrality_biohive:0 "Evolution"
+	#tradition_tec_centrality_biohive:0 "Evolution"
 	tradition_tec_centrality_biohive_desc:0 "TO DO. "	# REDACT LORE
 
 	tr_tec_centrality_adopt:0 "$tradition_tec_centrality$ Traditions"
 
 	tr_tec_centrality_finish:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_tooltip:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
+	tr_tec_centrality_finish_gestalt:0 "$tradition_tec_centrality$ Traditions Finished"
+	tr_tec_centrality_finish_tooltip:4 "$tec_loc_section_core_sector$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime$: §R+10§!\n$t$- $tec_loc_trade_value$: §R-10%§!\n$t$- This effect scales with distance from §Y£empire_capital£Core Sector§!"
+	tr_tec_centrality_finish_gestalt_tooltip:4 "$tec_loc_section_core_sector$\n$t$- $tec_loc_stability$: §G+10§!\n$t$- This effect scales with §Y$tec_loc_planet_ascension$§!\n\n$tec_loc_section_rim_sector$\n$t$- $tec_loc_crime_gestalt$: §R+20§!\n$t$- This effect scales with distance from §Y£empire_capital£Core Sector§!"
+	tr_tec_centrality_finish_tooltip_OLD:4 "Unlocks §YRim/Core World Designations§!.\n\n§H''Core-World designations are special colony designations for a limited amount of worlds inside the core sector which greatly increase the productivity of those planets.''\nRim-World designations are special colony designations for worlds outside the core sector, alleviating the bureaucratic charge on those worlds in exchange of production and increased crime.''§!\n"
 
-	tr_tec_centrality_finish_autarchy:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_autarchy_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
-
-	tr_tec_centrality_finish_hive:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_hive_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
-
-	tr_tec_centrality_finish_machine:0 "$tradition_tec_centrality$ Traditions Finished"
-	tr_tec_centrality_finish_machine_tooltip:4 "$tr_tec_centrality_finish_tooltip$"
-
-	tr_tec_centrality_finish_effect:4 ""
-	tr_tec_centrality_finish_autarchy_effect:4 ""
-	tr_tec_centrality_finish_machine_effect:4 ""
-	tr_tec_centrality_finish_hive_effect:4 ""
 
 	tr_tec_centrality_1:0 "Unquestionable Decision-making"
 	tr_tec_centrality_1_tooltip:0 "§YFactions§! output: §G+10%§!."
