--- a/localisation/english/zz_evolved_cui_l_english.yml
+++ b/localisation/english/zz_evolved_cui_l_english.yml
@@ -263,6 +263,9 @@
 	tec_loc_effect_soldiers: "£job_soldier£ $job_soldier_plural$"
 	tec_loc_effect_metallurgists: "£job_foundry£ $job_foundry_plural$"
 
+	tec_loc_section_core_sector: "§E£empire_capital£ §YCore§! Sector Planets:§!"
+	tec_loc_section_rim_sector: "§E£sector£ Non-§YCore§! Sector Planets:§!"
+
  #Situations	# TODO CODE REWORK - ICON
 	tec_loc_situation:0 "Situation"
 
@@ -270,7 +273,7 @@
 	tec_loc_espionage_interdiction_icon:0 "£trigger_tec_espionage_interdiction£"
 	tec_loc_espionage_interdiction:0 "$tec_loc_espionage_interdiction_icon$ Operation Interdiction"
 	tec_loc_espionage_interdiction_desc:0 "$tec_loc_espionage_interdiction$ is a value (%) of extra chance of discovering an hostile covert action on a planet or territory before it's executed"
-	tec_loc_espionage_bypass_icon:0 "£trigger_tec_espionage_bypass"
+	tec_loc_espionage_bypass_icon:0 "£trigger_tec_espionage_bypass£"
 	tec_loc_espionage_bypass:0 "$tec_loc_espionage_bypass_icon$ Operation Bypass"
 	tec_loc_espionage_bypass_desc:0 "$tec_loc_espionage_bypass$ is a value (%) of extra chance of overcoming target defenses and intelligence while executing a covert action on a planet or territory, delaying it's discovery until it's too late to react."
 
