feat: number iterators and planet choosing event for centrality

--- a/localisation/english/zz_evolved_traditions_l_english.yml
+++ b/localisation/english/zz_evolved_traditions_l_english.yml
@@ -1744,3 +1744,58 @@
 	tr_tec_identity_6_sys:0 "identity Tr 6"
 	tr_tec_identity_6_sys_tooltip:0 "§RNot ready§!"
 	tr_tec_identity_6_sys_delayed:0 "To Do."
+
+# Centrality
+ tec_centrality_planet_option_loc: "[This.GetName] - [This.solar_system.GetName] System (£pop£[This.tec_num_pops])"
+ TEC_CENTRALITY_OPTION_CAPITAL: "£empire£ [tec_centrality_target_capital.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_0: "[tec_centrality_target_0.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_1: "[tec_centrality_target_1.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_2: "[tec_centrality_target_2.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_3: "[tec_centrality_target_3.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_4: "[tec_centrality_target_4.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_5: "[tec_centrality_target_5.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_6: "[tec_centrality_target_6.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_7: "[tec_centrality_target_7.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_8: "[tec_centrality_target_8.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_9: "[tec_centrality_target_9.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_10: "[tec_centrality_target_10.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_11: "[tec_centrality_target_11.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_12: "[tec_centrality_target_12.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_13: "[tec_centrality_target_13.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_14: "[tec_centrality_target_14.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_15: "[tec_centrality_target_15.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_16: "[tec_centrality_target_16.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_17: "[tec_centrality_target_17.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_18: "[tec_centrality_target_18.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_19: "[tec_centrality_target_19.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_20: "[tec_centrality_target_20.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_21: "[tec_centrality_target_21.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_22: "[tec_centrality_target_22.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_23: "[tec_centrality_target_23.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_24: "[tec_centrality_target_24.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_25: "[tec_centrality_target_25.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_26: "[tec_centrality_target_26.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_27: "[tec_centrality_target_27.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_28: "[tec_centrality_target_28.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_29: "[tec_centrality_target_29.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_30: "[tec_centrality_target_30.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_31: "[tec_centrality_target_31.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_32: "[tec_centrality_target_32.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_33: "[tec_centrality_target_33.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_34: "[tec_centrality_target_34.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_35: "[tec_centrality_target_35.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_36: "[tec_centrality_target_36.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_37: "[tec_centrality_target_37.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_38: "[tec_centrality_target_38.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_39: "[tec_centrality_target_39.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_40: "[tec_centrality_target_40.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_41: "[tec_centrality_target_41.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_42: "[tec_centrality_target_42.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_43: "[tec_centrality_target_43.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_44: "[tec_centrality_target_44.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_45: "[tec_centrality_target_45.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_46: "[tec_centrality_target_46.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_47: "[tec_centrality_target_47.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_48: "[tec_centrality_target_48.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_49: "[tec_centrality_target_49.tec_centrality_planet_option_loc]"
+ TEC_CENTRALITY_OPTION_50: "[tec_centrality_target_50.tec_centrality_planet_option_loc]"
